fix(waybar): remove workspaces extra padding-left

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -14,10 +14,12 @@ window#waybar {
 }
 
 #workspaces * {
-  padding: 0px 2px;
+  padding: 0px;
 }
 
 #workspaces button {
+  padding: 0px 2px;
+  padding-left: 0px;
   color: alpha(@cursor, 0.8);
   background-color: transparent;
 }
